vcs: VcsTreeModelData - migrate Stream to JBIterable
JBIterable can be used in DataContext, while Stream is a one-time collection.

GitOrigin-RevId: 8b62abb87b486037dd0b8add6b6a08f04ac355ec